<resources>
    <string name="login">LogIn</string>
    <string name="signUp">SignUp</string>
    <string name="app_name">Party Shopping List</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="accountTitle">Purchase Lists</string>
    <string name="list_title">New List </string>
    <string name="create_purchase_dialog_title">Addition of Item</string>
    <string name="rename">Changing of Title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="list_dialog_name_hint">Enter name of the List</string>
    <string name="purchase_dialog_name_hint">Name of product</string>
    <string name="save">Save</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price: </string>
    <string name="zero">0</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lists">My Lists</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log Out</string>
    <string name="navigator">Navigation Drawer</string>
    <string name="additionally">Additionally</string>
    <string name="today">Today</string>
    <string name="pref_font">Scale</string>
    <string name="pref_exp_font">Change the title scale for lists</string>
    <string name="pref_exp_show_quantity_in_list">Show the number of products in the list</string>
    <string name="pref_exp_purch_font">Change scale for purchases</string>
    <string name="pref_show_quant">Show quantity</string>
    <string name="pref_exp_show_quant">Show quantity of purchases</string>
    <string name="pref_show_price">Show price</string>
    <string name="pref_exp_price">Show price of purchases</string>
    <string name="pref_markable">Mark purchases</string>
    <string name="pref_exp_markable">Mark purchased products</string>
    <string name="purchases">Purchases</string>
    <string name="chat">Chat</string>
    <string name="font_chang">Font changing</string>
    <string name="exit">Exit</string>
    <string name="yesterday">Yesterday</string>
    <string name="people_view_start_limit_view">(0/5)</string>
    <string name="totalContainer">Total</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="emailAuth">Email...</string>
    <string name="passwordAuth">Password...</string>
    <string name="userNameAuth">Your original nickname...</string>
    <string name="personsList">Persons</string>
    <string name="delete_all">Delete All </string>
    <string name="from">from </string>
    <string name="invitations">Invitations</string>
    <string name="action_search">search</string>
    <string name="invitation_dialog_title">Are you sure you want to add these people to conversation?</string>
    <string name="delete_people_dialog_title">Delete these people from conversation?</string>
    <string name="answer_dialog_title">"Are you sure you want to accept this invitation?"</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="invitation_content"> offer You to join to </string>
    <string name="alarm_default_title"> Are you sure? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chat_wallpapers">Chat Wallpapers</string>
    <string name="chat_wallpapers_explanation">Change wallpapers in chat</string>
    <string name="wallpapers">wallpapers</string>
    <string name="p_l_wallpapers">Purchase list Wallpapers</string>
    <string name="purchase_list_wallpapers_explanation">Change wallpapers in purchase list</string>
    <string name="delete_list_dialog"> Delete last purchase list? </string>
    <string name="delete"> Delete </string>
    <string name="delete_chat_history"> Are you sure you want to delete chat history? </string>
    <string name="delete_useless_dialog_guests"> Are you sure you want to delete this persons from dialog? </string>
    <string name="permissions"> Permissions </string>
    <string name="rename_list">Rename</string>
    <string name="name">Name:</string>
    <string name="dismiss"> Dismiss </string>
    <string name="product">Product</string>
    <string name="ignore_marked_title">Ignore marked items</string>
    <string name="ignore_marked_explanation">Calculator will ignore marked items</string>

    <string-array name="chat_wallpapers_titles">
        <item>coffee table</item>
        <item>chess</item>
        <item>colourful</item>
    </string-array>

    <string-array name="chat_wallpapers_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="purchase_list_wallpapers_titles">
        <item>none</item>
        <item>Football</item>
        <item>Blue</item>
        <item>Pizza</item>
        <item>Metal</item>
        <item>Soft</item>
    </string-array>


    <string-array name="purchase_list_wallpapers_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="font_array_entries">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

    <string-array name="font_array_lists_values">
        <item>20</item>
        <item>28</item>
        <item>34</item>
    </string-array>

    <string-array name="font_array_goods_values">
        <item>18</item>
        <item>22</item>
        <item>26</item>
    </string-array>

</resources>
