<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_dialog_style"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    >

    <TextView
        android:id="@+id/titleOfPurchaseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12sp"
        android:text="@string/create_purchase_dialog_title"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/nameOfPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/purchase_dialog_name_hint"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:maxLength="36"
        android:textSize="24sp" />

    <requestFocus></requestFocus>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:text="@string/quantity"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/quantityOfPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/priceOfPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnPurchaseCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/btnPurchaseSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>
