<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_dialog_style"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/titleOfDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16sp"
        android:text="@string/rename"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/nameOfList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/list_dialog_name_hint"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLength="36"
        android:textSize="20sp" />

    <requestFocus></requestFocus>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="12sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="30sp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30sp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
