<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.startandroid.purchaselist.views.AuthenticationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_back_2"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="320dp"
                android:layout_height="36dp"
                android:layout_above="@id/password"
                android:layout_centerInParent="true"
                android:background="@drawable/edit_auth_text_style"
                android:ems="10"
                android:hint="@string/emailAuth"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="30" />

            <EditText
                android:id="@+id/password"
                android:layout_width="320dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_auth_text_style"
                android:ems="10"
                android:hint="@string/passwordAuth"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="100" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="320dp"
                android:layout_height="36dp"
                android:layout_below="@id/password"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_auth_text_style"
                android:ems="10"
                android:hint="@string/userNameAuth"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:maxLength="15" />

            <RelativeLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/etUserName"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/auth_button_style"
                    android:scaleY="0.8"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btnLogUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/auth_button_style"
                    android:scaleY="0.8"
                    android:text="@string/signUp"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
